objects/sfcma__StripeMockResponseHeader__c.object
<CustomObject>
    <description>For internal use by Salesforce.</description>
    <fields>
        <fullName>sfcma__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sfcma__StripeMockResponse__c</fullName>
        <label>Stripe Mock Response</label>
        <referenceTo>sfcma__StripeMockResponse__c</referenceTo>
        <relationshipLabel>Stripe Mock Response Headers</relationshipLabel>
        <relationshipName>StripeMockResponseHeaders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfcma__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Checkout Stripe Mock Response Header</label>
    <nameField>
        <displayFormat>SMRH-{0000}</displayFormat>
        <label>Checkout Stripe Mock Response Header Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Stripe Mock Response Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>